	of window_set_node_of_window to save point and pagetop.
	(calling_window_point, calling_window_pagetop): Delete unused.

	* info/nodemenu.c (list_visited_nodes): Call
	info_set_node_of_window instead of set_remembered_pagetop_and_point,
	window_set_node_of_window and remember_window_and_node individually.
	(get_visited_nodes) Remove unnecessary check.

2014-06-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_print_node, print_node): print_node merged
	into info_print_node.

	(remember_window_and_node): Remove check for remembering the same
	node twice.

	(info_scroll_backward_page_only_set_window): Call the right function.

	* info/dir.c (dir_buffer, create_dir_buffer): Removed.
	(dir_node): New static variable.
	(get_dir_node): Store dir node as a simple NODE variable, not in the
	tags table of a FILE_BUFFER.  Comment updated.

2014-06-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.h (WINDOW): Fields nodes, pagetops, points
	nodes_index, nodes_slots removed.  Replaced with hist, hist_index
	and hist_slots.

	* info/gc.c (gc_pointers)
	* info/nodemenu.c (get_visited_nodes): Iterate over hist array
	in WINDOW.

	* info/session.c (set_remembered_pagetop_and_point)
	(remember_window_and_node, forget_window_and_nodes)
	(info_handle_pointer, kill_node, info_gc_file_buffers):
	Access window node history in hist field of WINDOW.

	(remember_window_and_node): Use add_pointer_to_array macro.

	(forget_node): New function.
	(forward_move_node_structure, kill_node): Call forget_node.

2014-06-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c: Some reordering of definitions and section comments.
	No functional changes intended.

2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (dump_map_to_text_buffer): Hide "echo-area-insert"
	entries in help window.

	* info/session.c (info_win_find_node): Merged into
	info_handle_pointer.

2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>
